# Morpheus-API

./: .env.example  .gitignore  AUTOMATIC_MODEL_SYNC_SOLUTION.md  Dockerfile  MODEL_SYNC_CONFIG.md  README.md  alembic.ini  awsonboard  awsonboard_mor  create_tables.py  database_summary.md  docker-compose.yml  fix_alembic.py  manage_migrations.sh  models.json.backup  plan.md  private_key_integration_summary.md  pyproject.toml
ai-docs/: delegation-toolkit-article.md  delegation_auth_flow.md  delegation_feasibility_analysis.md  frontend_dashboard_delegation_flow.md  nextjs-with-supabase-example.md  revoke-delegation-article.md  toolcallingissue.md
alembic/: script.py.mako
alembic/versions/: 2025_04_17_1622_d4ae65008d6d_create_initial_tables.py  2025_04_17_1623_69491a79cfd0_add_is_active_to_user_model.py  2025_04_17_1629_3ec3925c8904_add_name_field_to_apikey_model.py  2025_04_18_0218_7c29c35fc9bc_add_user_sessions_table.py  2025_04_19_0131_fix_session_constraints.py  2025_04_20_0757_d00825f2a89a_add_delegation_table.py  2025_04_28_1555_881e615d25ac_consolidate_session_model.py  2025_04_30_1200_add_updated_at_to_users.py
migration/: create_automation_settings.sql
scripts/: generate_model_mappings.py  run_production_e2e_test.sh  sync_models.py
src/: dependencies.py  main.py
src/core/: config.py  model_routing.py  model_sync.py  testing.py
src/crud/: api_key.py  automation.py  delegation.py  private_key.py  session.py  user.py
src/db/: database.py  models.py
src/schemas/: api_key.py  delegation.py  openai.py  private_key.py  session.py  user.py
(+19 files in other folders)
