[tool.poetry]
name = "morpheus-api-python"
version = "0.1.0"
description = "Morpheus API Gateway connecting Web2 clients to the Morpheus-Lumerin AI Marketplace"
authors = ["Morpheus Team <dev@morpheus.com>"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "^0.110.0"
uvicorn = "^0.27.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
redis = "^5.0.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
httpx = "^0.26.0"
cryptography = "^42.0.0"
python-dotenv = "^1.0.0"
jinja2 = "^3.1.3"
gunicorn = "^21.2.0"
email-validator = "^2.1.0"
boto3 = "^1.34.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
black = "^23.7.0"
ruff = "^0.1.6"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
    "."
]
asyncio_mode = "auto" 